# python_annotation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: mypy.yml
homework/: basic_annotation.py  inter_annotation.py
