[tool.poetry]
name = "python-annotation"
version = "0.0.0"
description = "Выполнение заданий на укрепление знаний аннотации типов"
authors = ["Danila <danila.malikov.pd@gmail.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
